ngapus bug button ada outline biru

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,10 @@ h1 {
 
 button {
 	cursor: pointer;
-	user-select: none;
+}
+
+button:focus {
+	outline: none;
 }
 
 .balek {
